bundled_metadata/force-app/main/default/objects/Contract_Line_Item_Settlement__c/Contract_Line_Item_Settlement__c.object-meta.xml
<CustomObject>
    <label>Contract Line Item Settlement</label>
    <nameField>
        <label>Contract Line Item Settlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Line Item Settlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>