bundled_metadata/force-app/main/default/objects/Contract_Line_Item_Settlement__c/fields/Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item__c</fullName>
    <label>Contract Line Item</label>
    <referenceTo>Contract_Line_Item__c</referenceTo>
    <relationshipLabel>Contract Line Item Settlements</relationshipLabel>
    <relationshipName>Contract_Line_Item_Settlements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>