bundled_metadata/force-app/main/default/objects/Contract_Line_Item_Settlement__c/fields/Contract_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Settlement__c</fullName>
    <label>Contract Settlement</label>
    <referenceTo>Contract_Settlement__c</referenceTo>
    <relationshipLabel>Contract Line Item Settlements</relationshipLabel>
    <relationshipName>Contract_Line_Item_Settlements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>